docs/api/qiskit/0.24/qiskit.transpiler.passes.TemplateOptimization.md
---
title: TemplateOptimization
description: API reference for qiskit.transpiler.passes.TemplateOptimization
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.TemplateOptimization
---

<span id="qiskit-transpiler-passes-templateoptimization" />

# qiskit.transpiler.passes.TemplateOptimization

<span id="qiskit.transpiler.passes.TemplateOptimization" />

`TemplateOptimization(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/optimization/template_optimization.py "view source code")

Class for the template optimization pass.

**Parameters**

*   **template\_list** (*list\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*()]*) – list of the different template circuit to apply.
*   **heuristics\_backward\_param** (*list\[int]*) – \[length, survivor] Those are the parameters for applying heuristics on the backward part of the algorithm. This part of the algorithm creates a tree of matching scenario. This tree grows exponentially. The heuristics evaluates which scenarios have the longest match and keep only those. The length is the interval in the tree for cutting it and surviror is the number of scenarios that are kept. We advice to use l=3 and s=1 to have serious time advantage. We remind that the heuristics implies losing a part of the maximal matches. Check reference for more details.
*   **heuristics\_qubits\_param** (*list\[int]*) – \[length] The heuristics for the qubit choice make guesses from the dag dependency of the circuit in order to limit the number of qubit configurations to explore. The length is the number of successors or not predecessors that will be explored in the dag dependency of the circuit, each qubits of the nodes are added to the set of authorized qubits. We advice to use length=1. Check reference for more details.

### \_\_init\_\_

<span id="qiskit.transpiler.passes.TemplateOptimization.__init__" />

`__init__(template_list=None, heuristics_qubits_param=None, heuristics_backward_param=None)`

**Parameters**

*   **template\_list** (*list\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*()]*) – list of the different template circuit to apply.
*   **heuristics\_backward\_param** (*list\[int]*) – \[length, survivor] Those are the parameters for applying heuristics on the backward part of the algorithm. This part of the algorithm creates a tree of matching scenario. This tree grows exponentially. The heuristics evaluates which scenarios have the longest match and keep only those. The length is the interval in the tree for cutting it and surviror is the number of scenarios that are kept. We advice to use l=3 and s=1 to have serious time advantage. We remind that the heuristics implies losing a part of the maximal matches. Check reference for more details.
*   **heuristics\_qubits\_param** (*list\[int]*) – \[length] The heuristics for the qubit choice make guesses from the dag dependency of the circuit in order to limit the number of qubit configurations to explore. The length is the number of successors or not predecessors that will be explored in the dag dependency of the circuit, each qubits of the nodes are added to the set of authorized qubits. We advice to use length=1. Check reference for more details.

## Methods

|                                                                                                                                                      |                                                                          |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
| [`__init__`](#qiskit.transpiler.passes.TemplateOptimization.__init__ "qiskit.transpiler.passes.TemplateOptimization.__init__")(\[template\_list, …]) | **param template\_list**list of the different template circuit to apply. |
| [`name`](#qiskit.transpiler.passes.TemplateOptimization.name "qiskit.transpiler.passes.TemplateOptimization.name")()                                 | Return the name of the pass.                                             |
| [`run`](#qiskit.transpiler.passes.TemplateOptimization.run "qiskit.transpiler.passes.TemplateOptimization.run")(dag)                                 | **param dag**DAG circuit.                                                |

## Attributes

|                                                                                                                                                                          |                                             |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------- |
| [`is_analysis_pass`](#qiskit.transpiler.passes.TemplateOptimization.is_analysis_pass "qiskit.transpiler.passes.TemplateOptimization.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
| [`is_transformation_pass`](#qiskit.transpiler.passes.TemplateOptimization.is_transformation_pass "qiskit.transpiler.passes.TemplateOptimization.is_transformation_pass") | Check if the pass is a transformation pass. |

### is\_analysis\_pass

<span id="qiskit.transpiler.passes.TemplateOptimization.is_analysis_pass" />

`property is_analysis_pass`

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

### is\_transformation\_pass

<span id="qiskit.transpiler.passes.TemplateOptimization.is_transformation_pass" />

`property is_transformation_pass`

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

### name

<span id="qiskit.transpiler.passes.TemplateOptimization.name" />

`name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.TemplateOptimization.run" />

`run(dag)`

**Parameters**

**dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG circuit.

**Returns**

optimized DAG circuit.

**Return type**

[DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

**Raises**

[**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If the template has not the right form or if the output circuit acts differently as the input circuit.

